sonar lint erroe fixed , update